--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Ally Elvis Nzeyimana",
+  "license": "MIT",
   "dependencies": {
     "@types/node": "^18.0.6"
   }
 }
+"scripts": {
+  "lint": "eslint .",
+  "format": "prettier --write ."
+}
+
