--- a/functions/package.json
+++ b/functions/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "name": "firebase-app-hosting-angular",
+  "version": "1.0.0",
   "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "serve:ssr:firebase-app-hosting-angular": "LOCAL=true node dist/firebase-app-hosting-angular/server/server.mjs"
   },
-  "engines": {
-    "node": "18"
-  },
-  "main": "index.js",
+  "private": true,
   "dependencies": {
-    "firebase": "^11.6.0",
-    "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "@angular/animations": "^19.1.4",
+    "@angular/common": "^19.1.4",
+    "@angular/compiler": "^19.1.4",
+    "@angular/core": "^19.1.4",
+    "@angular/forms": "^19.1.4",
+    "@angular/platform-browser": "^19.1.4",
+    "@angular/platform-browser-dynamic": "^19.1.4",
+    "@angular/platform-server": "^19.1.4",
+    "@angular/router": "^19.1.4",
+    "@angular/ssr": "^19.1.6",
+    "express": "^4.18.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
-  },
-  "private": true
+    "@angular-devkit/build-angular": "^19.1.6",
+    "@angular/cli": "^19.1.6",
+    "@angular/compiler-cli": "^19.1.4",
+    "@types/express": "^4.17.21",
+    "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^9.0.8",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.5.4"
+  }
 }
